--- a/frontend/src/styles/PostWrite.module.css
+++ b/frontend/src/styles/PostWrite.module.css
@@ -82,3 +82,54 @@
 .editor {
   width: 100%;
 }
+
+/* 임시저장 */
+.temp__container {
+  width: 100%;
+  height: 35em;
+  padding: 2em 0;
+  box-sizing: border-box;
+}
+
+.temp__contents {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 70%;
+  margin: 0 auto;
+  box-sizing: border-box;
+  justify-content: center;
+}
+
+.temp__contents > div:nth-child(1) {
+  display: flex;
+  align-items: center;
+  gap: 0.3em;
+}
+
+.temp__contents > div:nth-child(1) > svg {
+  font-size: medium;
+  color: lightgray;
+}
+
+.temp__contents > div:nth-child(2) {
+  height: 0.1em;
+  margin: 1em 0;
+  background-color: black;
+}
+
+.temp__list {
+  height: calc(35em - 4em - 2em);
+  overflow: scroll;
+  margin-bottom: 1em;
+  box-sizing: border-box;
+}
+
+.temp__list > div {
+}
+
+.temp_button {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+}
