--- a/frontend/src/styles/PostWrite.module.css
+++ b/frontend/src/styles/PostWrite.module.css
@@ -82,7 +82,7 @@
 .temp__container {
   width: 100%;
   height: 35em;
-  padding: 2em 0;
+  padding: 3em 0;
   box-sizing: border-box;
 }
 
@@ -90,7 +90,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
   box-sizing: border-box;
   justify-content: center;
@@ -121,6 +121,49 @@
 }
 
 .temp__list > div {
+  display: flex;
+  align-items: center;
+  height: 2em;
+}
+
+.temp__list > div > div {
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.temp__list > div > span:nth-child(1) {
+  width: 8em;
+}
+
+.temp__list > div > div > span:nth-child(1) {
+  color: #333;
+}
+
+.delete {
+  visibility: hidden;
+}
+
+.tooltip {
+  display: none;
+  position: absolute;
+}
+
+.temp__list > div > div:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.temp__list > div:hover .delete {
+  visibility: visible;
+  font-size: medium;
+  color: darkgray;
+  margin-left: 0.2em;
+}
+
+.temp__list > div > div:hover .tooltip {
+  display: inline;
+  top: 1.2em;
 }
 
 .temp_button {
